deploy/infra/netpol/01-medplum-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: medplum
spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
